# pktvisor

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .lgtm.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  conanfile.txt  entry.sh
3rd/datasketches/common/: CMakeLists.txt
3rd/datasketches/cpc/: CMakeLists.txt
3rd/datasketches/fi/: CMakeLists.txt
3rd/fstrm/: CMakeLists.txt  ChangeLog  LICENSE  README.md  configure.ac
3rd/fstrm/fstrm/: control.c  control.h  file.c  file.h  fstrm-private.h  fstrm.h  iothr.c  iothr.h  libfstrm.pc.in  libfstrm.sym  rdwr.c  rdwr.h  reader.c  reader.h  tcp_writer.c  tcp_writer.h  time.c  unix_writer.c  unix_writer.h  writer.c  writer.h
3rd/fstrm/libmy/: .gitignore  LICENSE  argv.c  argv.h  argv_loc.h  my_alloc.h  my_memory_barrier.h  my_queue.h  my_queue_mb.c  my_queue_mutex.c  my_time.h  print_string.h  read_bytes.h  ubuf.h  vector.h
3rd/netflow/: CMakeLists.txt  bookkeeper.h  collector.c  collector.h  exporter.h  ipfix.c  ipfix.h  netflow.h  netflow_v1.c  netflow_v1.h  netflow_v5_v7.c  netflow_v5_v7.h  netflow_v9.c  netflow_v9.h  nfdump.h  nffile.h  nfx.h
3rd/sflow/: CMakeLists.txt  sflow.h  sflow_drop.h  sflow_v2v4.h
3rd/timer/: CMakeLists.txt  README.md  event.hpp  timer.hpp
cmd/pktvisor-pcap/: CMakeLists.txt  main.cpp
cmd/pktvisor-reader/: CMakeLists.txt  main.cpp
cmd/pktvisor-sflow/: CMakeLists.txt  main.cpp
cmd/pktvisord/: CMakeLists.txt  CrashpadHandler.h  NetworkInterfaceScan.h  main.cpp
libs/visor_dns/: CMakeLists.txt  DnsAdditionalRecord.h  DnsLayer.cpp  DnsLayer.h  DnsLayerEnums.h  DnsResource.cpp  DnsResource.h  DnsResourceData.cpp  DnsResourceData.h  PublicSuffixList.h  dns.cpp  dns.h  querypairmgr.cpp  querypairmgr.h
libs/visor_dns/tests/: CMakeLists.txt  benchmark_dns.cpp  test_dns.cpp
libs/visor_http_client/: CMakeLists.txt  base64.cpp  base64.h  http.h  httpssession.cpp  httpssession.h  target.h  tcpsession.cpp  tcpsession.h  test_driver.cpp
libs/visor_tcp/: CMakeLists.txt  VisorTcpLayer.cpp  VisorTcpLayer.h
libs/visor_test/: CMakeLists.txt
libs/visor_test/catch2/: catch_test_visor.hpp
libs/visor_transaction/: CMakeLists.txt  TransactionManager.h
libs/visor_utils/: CMakeLists.txt  test_utils.cpp  utils.cpp  utils.h
libs/visor_utils/tests/: CMakeLists.txt  test_utils.cpp
src/: AbstractManager.h  AbstractMetricsManager.h  AbstractModule.cpp  AbstractModule.h  AbstractPlugin.cpp  AbstractPlugin.h  CMakeLists.txt  Configurable.h  CoreManagers.cpp  CoreManagers.h  CoreRegistry.cpp  CoreRegistry.h  CoreServer.cpp  CoreServer.h  GeoDB.cpp  GeoDB.h  HandlerManager.h  HandlerModulePlugin.cpp  HandlerModulePlugin.h  HttpServer.h  InputEventProxy.h  InputModulePlugin.cpp  InputModulePlugin.h  InputStream.h  InputStreamManager.h  IpPort.cpp  IpPort.h  Labels.cpp  Labels.h  LruList.h  Metrics.cpp  Metrics.h  OpenTelemetry.h  Policies.cpp  Policies.h  README.md  StreamHandler.cpp  StreamHandler.h  Tags.cpp  Tags.h  (+24 more)
src-m/: AbstractManager.cpp  AbstractManager.h  AbstractMetricsManager.h  AbstractModule.cpp  AbstractModule.h  AbstractPlugin.cpp  AbstractPlugin.h  CMakeLists.txt  GeoDB.cpp  GeoDB.h  HandlerManager.cpp  HandlerManager.h  HandlerModuleDesc.cpp  HandlerModuleDesc.h  HandlerModulePlugin.cpp  HandlerModulePlugin.h  HandlerRegistry.cpp  HandlerRegistry.h  HttpServer.cpp  HttpServer.h  InputManager.cpp  InputManager.h  InputModuleDesc.cpp  InputModuleDesc.h  InputModulePlugin.cpp  InputModulePlugin.h  InputRegistry.cpp  InputRegistry.h  InputStream.cpp  InputStream.h  InputStreamManager.cpp  InputStreamManager.h  MetricsManager.cpp  MetricsManager.h  StreamHandler.cpp  StreamHandler.h  StreamInput.cpp  StreamInput.h  config.h.in
src-m/handlers/: static_plugins.h
src-m/handlers/dns/: CMakeLists.txt  DnsHandlerModulePlugin.cpp  DnsHandlerModulePlugin.h  DnsLayer.cpp  DnsResource.cpp  DnsResource.h  DnsResourceData.cpp  DnsResourceData.h  DnsStreamHandler.cpp  DnsStreamHandler.h  dns.h  querypairmgr.cpp
src-m/handlers/net/: CMakeLists.txt  NetHandlerModuleDesc.cpp  NetHandlerModuleDesc.h  NetHandlerModulePlugin.cpp  NetHandlerModulePlugin.h  NetStreamHandler.cpp  NetStreamHandler.h
src-m/inputs/: static_plugins.h
src-m/inputs/pcap/: CMakeLists.txt  PcapInputModuleDesc.cpp  PcapInputModuleDesc.h  PcapInputModulePlugin.cpp  PcapInputModulePlugin.h  PcapInputStream.cpp  PcapInputStream.h  PcapStreamInput.cpp  PcapStreamInput.h  PcapStreamInputDesc.cpp  PcapStreamInputDesc.h  utils.cpp  utils.h
src/dns/: DnsLayer.cpp  DnsLayer.h  DnsLayerEnums.h  DnsResource.cpp  DnsResource.h  DnsResourceData.cpp  DnsResourceData.h  dns.h
src/handlers/: CMakeLists.txt  README.md  static_plugins.h
src/handlers/bgp/: BgpHandler.conf  BgpHandlerModulePlugin.cpp  BgpHandlerModulePlugin.h  BgpStreamHandler.cpp  BgpStreamHandler.h  CMakeLists.txt  README.md
src/handlers/dhcp/: CMakeLists.txt  DhcpHandler.conf  DhcpHandlerModulePlugin.cpp  DhcpHandlerModulePlugin.h  DhcpStreamHandler.cpp  DhcpStreamHandler.h  README.md  RequestAckManager.cpp  RequestAckManager.h
src/handlers/dns/: CMakeLists.txt  DnsAdditionalRecord.h  DnsHandler.conf  DnsHandlerEventProxy.h  DnsHandlerModulePlugin.cpp  DnsHandlerModulePlugin.h  DnsLayer.cpp  DnsLayer.h  DnsLayerEnums.h  DnsResource.cpp  DnsResource.h  DnsResourceData.cpp  DnsResourceData.h  DnsStreamHandler.cpp  DnsStreamHandler.h  LRUList.h  PublicSuffixList.h  README.md  dns.cpp  dns.h  querypairmgr.cpp  querypairmgr.h
src/handlers/dns_wire/: CMakeLists.txt  DnsWireHandler.conf  DnsWireHandlerModulePlugin.cpp  DnsWireHandlerModulePlugin.h  DnsWireStreamHandler.cpp  DnsWireStreamHandler.h  README.md
src/handlers/dns_xact/: CMakeLists.txt  (+8 more)
src/inputs/: CMakeLists.txt  README.md  static_plugins.h
src/tests/: main.cpp  test_geoip.cpp  test_handlers.cpp  test_ipport.cpp  test_labels.cpp  test_metrics.cpp  test_policies.cpp  test_sketches.cpp  test_tags.cpp  test_taps.cpp
src/visor_dns/: CMakeLists.txt  DnsAdditionalRecord.h  DnsLayer.cpp  DnsLayerEnums.h  DnsResource.cpp  DnsResource.h  DnsResourceData.cpp  PublicSuffixList.h  dns.cpp
(+553 files in other folders)
